--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native/new-app-screen": "0.80.2",
+    "@react-navigation/native": "7.1.16",
+    "@react-navigation/native-stack": "7.3.23",
     "react": "19.1.0",
     "react-native": "0.80.2",
-    "@react-native/new-app-screen": "0.80.2"
+    "react-native-safe-area-context": "5.5.2",
+    "react-native-screens": "4.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -36,5 +40,6 @@
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
